# CheckDST

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  set_envs.sh  set_envs_mine.sh
ParlAI/: .gitignore  CHECKDST_README.md  MYREADME.md  conftest.py  requirements.txt  set_envs.sh  set_envs_mine.sh  setup.py
ParlAI/bash_scripts/: bart_finetune_multiwoz.sh  bart_finetune_sgd.sh  bart_prefinetune.sh  bart_submit_pft.py  eval_all_checkpoints.py  eval_checkpoint.sh  evaluate_laug_invariance.sh  (+6 more)
data/: .gitignore  README.md  add_coref_labels_for_all_multiwoz_versions.py  check_data_across_testsets.py  check_laug_dial_list.py  compare_versions.py  form_multiwoz_dst_few_shot_data.py  prep_data_for_trippy.py  prep_for_trippy.ipynb  prepare_multiwoz_dst.sh  reformat_laug_multiwoz_dst.py  replace_laug_context_and_slotinf_with_official.py  split_data.py  test_laug_metrics.py  utils.py
dialoglue/: .gitignore  bert_models.py  constants.py  data_readers.py  dump_outputs.py  dump_outputs_fewshot.py  evaluate.py  myreadme.md  requirements.txt  run.py
src/: run_checkdst_diagnosis.py  test_checkdst.py  utils.py
tests/: test_checkdst.py
trippy-public-master/: .gitignore  CHECKDST_README.md  DO.example.advanced  DO.example.advanced_slurm.sh  DO.example.laug  DO.example.laug_slurm.sh  DO.example.mtl  DO.example.simple  README.md  checkdst.py  data_processors.py  dataset_aux_task.py  dataset_multiwoz21.py  dataset_sim.py  dataset_woz2.py  get_conditional_jga.py  get_no_hallucination_frequency.py  metric_bert_dst.py  modeling_bert_dst.py  modeling_roberta_dst.py  multiwoz_pred_json_to_csv.py  multiwoz_pred_json_to_csv_batch_parallel.sh  requirements.txt  run_dst.py  run_dst_mtl.py  summarize_checkdst.ipynb  tensorlistdataset.py  utils_dst.py
(+833 files in other folders)
