[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "checkdst"
version = "0.0.1"
authors = [
  { name="Justin Cho", email="jcho@isi.edu" },
]
description = "Scripts for CheckDST"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wise-east/CheckDST"
"Bug Tracker" = "https://github.com/wise-east/CheckDST/issues"