[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "checkdst"
version = "0.0.1"
authors = [
  { name="anon", email="anon@email.com" },
]
description = "Scripts for CheckDST"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "anon"
"Bug Tracker" = "anon"