[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "checkdst"
version = "0.0.1"
authors = [
  { name="Justin Cho", email="hd.justincho@gmail.com" },
]
description = "Scripts for CheckDST"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "loguru"
]

[project.urls]
"Homepage" = "https://justin-cho.com/CheckDST"
"Bug Tracker" = "https://github.com/wise-east/CheckDST/issues"